; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/extr_tegra210-adma.c_tegra_adma_pause.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/extr_tegra210-adma.c_tegra_adma_pause.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_chan = type { i32 }
%struct.tegra_adma_chan = type { %struct.tegra_adma_desc* }
%struct.tegra_adma_desc = type { %struct.tegra_adma_chan_regs }
%struct.tegra_adma_chan_regs = type { i32 }

@ADMA_CH_CTRL = common dso_local global i32 0, align 4
@ADMA_CH_CTRL_XFER_PAUSE_SHIFT = common dso_local global i32 0, align 4
@TEGRA_ADMA_BURST_COMPLETE_TIME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"unable to pause DMA channel\0A\00", align 1
@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dma_chan*)* @tegra_adma_pause to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tegra_adma_pause(%struct.dma_chan* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dma_chan*, align 8
  %4 = alloca %struct.tegra_adma_chan*, align 8
  %5 = alloca %struct.tegra_adma_desc*, align 8
  %6 = alloca %struct.tegra_adma_chan_regs*, align 8
  %7 = alloca i32, align 4
  store %struct.dma_chan* %0, %struct.dma_chan** %3, align 8
  %8 = load %struct.dma_chan*, %struct.dma_chan** %3, align 8
  %9 = call %struct.tegra_adma_chan* @to_tegra_adma_chan(%struct.dma_chan* %8)
  store %struct.tegra_adma_chan* %9, %struct.tegra_adma_chan** %4, align 8
  %10 = load %struct.tegra_adma_chan*, %struct.tegra_adma_chan** %4, align 8
  %11 = getelementptr inbounds %struct.tegra_adma_chan, %struct.tegra_adma_chan* %10, i32 0, i32 0
  %12 = load %struct.tegra_adma_desc*, %struct.tegra_adma_desc** %11, align 8
  store %struct.tegra_adma_desc* %12, %struct.tegra_adma_desc** %5, align 8
  %13 = load %struct.tegra_adma_desc*, %struct.tegra_adma_desc** %5, align 8
  %14 = getelementptr inbounds %struct.tegra_adma_desc, %struct.tegra_adma_desc* %13, i32 0, i32 0
  store %struct.tegra_adma_chan_regs* %14, %struct.tegra_adma_chan_regs** %6, align 8
  store i32 10, i32* %7, align 4
  %15 = load %struct.tegra_adma_chan*, %struct.tegra_adma_chan** %4, align 8
  %16 = load i32, i32* @ADMA_CH_CTRL, align 4
  %17 = call i32 @tdma_ch_read(%struct.tegra_adma_chan* %15, i32 %16)
  %18 = load %struct.tegra_adma_chan_regs*, %struct.tegra_adma_chan_regs** %6, align 8
  %19 = getelementptr inbounds %struct.tegra_adma_chan_regs, %struct.tegra_adma_chan_regs* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* @ADMA_CH_CTRL_XFER_PAUSE_SHIFT, align 4
  %21 = shl i32 1, %20
  %22 = load %struct.tegra_adma_chan_regs*, %struct.tegra_adma_chan_regs** %6, align 8
  %23 = getelementptr inbounds %struct.tegra_adma_chan_regs, %struct.tegra_adma_chan_regs* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = or i32 %24, %21
  store i32 %25, i32* %23, align 4
  %26 = load %struct.tegra_adma_chan*, %struct.tegra_adma_chan** %4, align 8
  %27 = load i32, i32* @ADMA_CH_CTRL, align 4
  %28 = load %struct.tegra_adma_chan_regs*, %struct.tegra_adma_chan_regs** %6, align 8
  %29 = getelementptr inbounds %struct.tegra_adma_chan_regs, %struct.tegra_adma_chan_regs* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @tdma_ch_write(%struct.tegra_adma_chan* %26, i32 %27, i32 %30)
  br label %32

32:                                               ; preds = %43, %1
  %33 = load i32, i32* %7, align 4
  %34 = add nsw i32 %33, -1
  store i32 %34, i32* %7, align 4
  %35 = icmp ne i32 %33, 0
  br i1 %35, label %36, label %41

36:                                               ; preds = %32
  %37 = load %struct.tegra_adma_chan*, %struct.tegra_adma_chan** %4, align 8
  %38 = call i32 @tegra_adma_is_paused(%struct.tegra_adma_chan* %37)
  %39 = icmp ne i32 %38, 0
  %40 = xor i1 %39, true
  br label %41

41:                                               ; preds = %36, %32
  %42 = phi i1 [ false, %32 ], [ %40, %36 ]
  br i1 %42, label %43, label %46

43:                                               ; preds = %41
  %44 = load i32, i32* @TEGRA_ADMA_BURST_COMPLETE_TIME, align 4
  %45 = call i32 @udelay(i32 %44)
  br label %32

46:                                               ; preds = %41
  %47 = load i32, i32* %7, align 4
  %48 = icmp slt i32 %47, 0
  br i1 %48, label %49, label %55

49:                                               ; preds = %46
  %50 = load %struct.tegra_adma_chan*, %struct.tegra_adma_chan** %4, align 8
  %51 = call i32 @tdc2dev(%struct.tegra_adma_chan* %50)
  %52 = call i32 @dev_err(i32 %51, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %53 = load i32, i32* @EBUSY, align 4
  %54 = sub nsw i32 0, %53
  store i32 %54, i32* %2, align 4
  br label %56

55:                                               ; preds = %46
  store i32 0, i32* %2, align 4
  br label %56

56:                                               ; preds = %55, %49
  %57 = load i32, i32* %2, align 4
  ret i32 %57
}

declare dso_local %struct.tegra_adma_chan* @to_tegra_adma_chan(%struct.dma_chan*) #1

declare dso_local i32 @tdma_ch_read(%struct.tegra_adma_chan*, i32) #1

declare dso_local i32 @tdma_ch_write(%struct.tegra_adma_chan*, i32, i32) #1

declare dso_local i32 @tegra_adma_is_paused(%struct.tegra_adma_chan*) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @dev_err(i32, i8*) #1

declare dso_local i32 @tdc2dev(%struct.tegra_adma_chan*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
